cabal-version:       >=1.10

name:                LamToWat
version:             0.1.0.0

build-type:          Simple
extra-source-files:  README.md

executable lam2wat
  main-is:             Main.hs
  other-modules:       Commands
                       Interpreter
                       Option
                       Run
                       Types
                       Union
                       Val
                       Vec

                       Cps.Syntax
                       Cps.Test

                       Hps.Syntax
                       Hps.Test

                       Lam.Lexer
                       Lam.Parser
                       Lam.Syntax
                       Lam.Test

                       Tps.Commands
                       Tps.Syntax
                       Tps.Test

                       Tree.Commands
                       Tree.Syntax
                       Tree.Test

                       Trans.Cps2Hps
                       Trans.Hps2Wat
                       Trans.Lam2Cps
                       Trans.Lam2Tree
                       Trans.Tps2Tps
                       Trans.Tps2Wat
                       Trans.Tree2Tps

                       Wat.Syntax
                       Wat.Test

  build-depends:       Cabal >= 3.0.1.0,
                       base >= 4.13,
                       directory >= 1.3.6.0,
                       mtl >= 2.2.2,
                       parsec >= 3.1.14.0,
                       pretty-show >= 1.10,
                       shake >= 0.19.4
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite lam2test
  type:                detailed-0.9
  test-module:         Test
  other-modules:       Commands
                       Interpreter
                       Option
                       Run
                       Types
                       Union
                       Val
                       Vec

                       Cps.Syntax
                       Cps.Test

                       Hps.Syntax
                       Hps.Test

                       Lam.Lexer
                       Lam.Parser
                       Lam.Syntax
                       Lam.Test

                       Tps.Commands
                       Tps.Syntax
                       Tps.Test

                       Tree.Commands
                       Tree.Syntax
                       Tree.Test

                       Trans.Cps2Hps
                       Trans.Hps2Wat
                       Trans.Lam2Cps
                       Trans.Lam2Tree
                       Trans.Tps2Tps
                       Trans.Tps2Wat
                       Trans.Tree2Tps

                       Wat.Syntax
                       Wat.Test

  build-depends:       Cabal >= 3.0.1.0,
                       base >= 4.13,
                       directory >= 1.3.6.0,
                       mtl >= 2.2.2,
                       parsec >= 3.1.14.0,
                       pretty-show >= 1.10,
                       shake >= 0.19.4
  hs-source-dirs:      src
                       test
  default-language:    Haskell2010
