cabal-version:       >=1.10

name:                LamToWat
version:             0.1.0.0

build-type:          Simple
extra-source-files:  README.md

executable lam2wat
  main-is:             Main.hs
  other-modules:       Interpreter
                       Lam
                       Run
                       Types
                       Val
                       Wat

                       CTree.Commands
                       CTree.Lam2Tree
                       CTree.Option
                       CTree.Tps
                       CTree.Tps2Tps
                       CTree.Tps2Wat
                       CTree.Tree
                       CTree.Union
                       CTree.Vec
                       CTree.Tree2Tps

                       Cont.Cps
                       Cont.Cps2Cps
                       Cont.Cps2Wat
                       Cont.Lam2Cps

  build-depends:       Cabal >= 3.0.1.0,
                       base >= 4.13,
                       containers >= 0.6.2.1,
                       directory >= 1.3.6.0,
                       mtl >= 2.2.2,
                       parsec >= 3.1.14.0,
                       pretty-show >= 1.10,
                       pretty-tree >= 0.1.0.0,
                       prettyprinter >= 1.7.0,
                       shake >= 0.19.4
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite lam2test
  type:                detailed-0.9
  test-module:         Test
  other-modules:       Interpreter
                       Lam
                       Run
                       Types
                       Val
                       Wat

                       CTree.Commands
                       CTree.Lam2Tree
                       CTree.Option
                       CTree.Tps
                       CTree.Tps2Tps
                       CTree.Tps2Wat
                       CTree.Tree
                       CTree.Union
                       CTree.Vec
                       CTree.Tree2Tps

                       Cont.Cps
                       Cont.Cps2Cps
                       Cont.Cps2Wat
                       Cont.Lam2Cps

  build-depends:       Cabal >= 3.0.1.0,
                       base >= 4.13,
                       containers >= 0.6.2.1,
                       directory >= 1.3.6.0,
                       mtl >= 2.2.2,
                       parsec >= 3.1.14.0,
                       pretty-show >= 1.10,
                       pretty-tree >= 0.1.0.0,
                       prettyprinter >= 1.7.0,
                       shake >= 0.19.4
  hs-source-dirs:      src
                       test
  default-language:    Haskell2010
